# ecommerce-transaction-data-analysis

./: .gitignore  Dockerfile  customer_clusters.csv  requirements.txt
.github/workflows/: ci.yml
app/: pyproject.toml
app/data/: keywords_with_sales.csv  monthly_sales_by_country.csv  total_sales_by_country_updated.html
app/docs/: about_data.md  about_preprocessing.md  about_trending_analysis.md  how_can_we_make_poster.md  keyword_analysis.md
app/src/: Untitled-1.py  Untitled-2.py  basic_analysis.py  basic_analysis2.py  code.ipynb  cust_seg.py  cust_seg2.py  keyword_analysis.ipynb  keyword_analysis_ver2.py  knowledge_graph_ver3.py  knowledge_graph_ver4.py  knowledge_graph_ver5.py  knowledge_graph_ver6.py  pie_chart_except_for_uk.py  plot_pie_chart.py  preprocessing.py  rhycha_analysis.ipynb  uk_whole_sale_by_month.py  utils.py  visualizing.py  weekdays_analysis.py  weekly_aggregation.py  whole_sales.with_map.py
app/src/.temp/:  customer_segmentation.py  customer_seg_completed.py  knowledge_graph_ver1.py  knowledge_graph_ver2.py  knowledge_graph_ver4.py
