[tool.poetry]
name = "ecommtoolkit"
version = "0.1.0"
description = ""
authors = ["rhycha <subspon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
